Fixes overlap navbar

--- a/app/scss/pages/_main.scss
+++ b/app/scss/pages/_main.scss
@@ -7,13 +7,14 @@ html,
 body {
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
+	scroll-padding-top: 70px; /* height of sticky header */
 }
 body {
 	display: flex;
 	flex-direction: column;
-	transition: background 500ms ease-in-out;
 	background-color: #1d1d1d;
 	color: #fff; /* IE 8 */
+	transition: background-color 3s;
 }
 //TODO: change background color for explorer
 //TODO: add gradient or some animation, maybe full gradient because it can interract with showing navbar and full height first frame
@@ -65,37 +66,16 @@ body {
 
 .container--special {
 	max-width: 100vw;
-
-	// .frontend.row {
-	// 	display: flex;
-	// 	justify-content: space-around;
-	// 	align-items: center;
-	// 	.first {
-	// 		width: 50%;
-	// 		height: 100vh;
-	// 		display: flex;
-	// 		justify-content: center;
-	// 		align-items: center;
-	// 		font-size: 48px;
-	// 		margin: 0 !important;
-	// 	}
-	// }
 }
 .section {
-	// color: $darkpurple;
+	// Adds background
+	// background-image: linear-gradient(#8d8d8d1a 2px, transparent 2px),
+	// 	linear-gradient(to right, #8d8d8d1a 2px, transparent 2px);
+	// background-size: 1.5rem 1.5rem;
 }
 .section:not(:last-of-type) {
 	min-height: 80vh;
 	margin: 0 auto;
-
-	// padding: 4rem 0;
-
-	// &[data-bg='yellow'] {
-	// 	color: #333;
-	// }
-	// &[data-bg='#ef233c'] {
-	// 	color: $color-pinky;
-	// }
 
 	.bg__orange .fab {
 		color: $darkpink;
@@ -118,37 +98,12 @@ body {
 			color: $color-white;
 		}
 
-		// &.skills {
-		// 	p {
-		// 		font-size: 0.8rem;
-		// 		line-height: 1.3rem;
-		// 	}
-		// }
-
 		.frontend,
 		.ui,
 		.e-commerce {
 			margin: 1.5rem 0;
 		}
 	}
-
-	// &:nth-child(1) {
-	// 	// background-color: $color-pinky;
-	// 	color: $color-pinky:;
-	// 	// transition: all 3s ease;
-	// }
-	// &:nth-child(2) {
-	// 	// background-color: $color-pinky:;
-	// 	color: $color-pewter;
-	// }
-	// &:nth-child(3) {
-	// 	background-color: $color-pewter;
-	// 	color: $color-orange;
-	// }
-	// &:nth-child(4) {
-	// 	background-color: $color-orange;
-	// 	color: $color-blue-steel;
-	// }
 }
 #about {
 	.content {
@@ -169,7 +124,7 @@ body {
 }
 
 footer {
-	background-color: $color-pinky;
+	background-color: $color-black;
 	color: $color-white;
 	display: flex;
 	flex-direction: column;
